--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rita": "^2.8.1",
-    "uuid": "^8.3.2"
+    "@babel/core": "^7.0.0",
+    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/react": "^11.7.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rita": "2.8.1",
+    "uuid": "8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
